deployment/prod/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-deployment
  namespace: prod
spec:
  selector:
    matchLabels:
      app: golang-app
  replicas: 2
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: golang-app
    spec:
      containers:
      - name: golang
        image: kahootali/golang-sample-app:c0118fa
        ports:
        - containerPort: 8080
          name: tcp
